welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
faireV();		 
      ^